add joe to pos provider dropdown

--- a/crm/index.html
+++ b/crm/index.html
@@ -1353,7 +1353,7 @@
                     <div class="form-group"><label>Type</label><select id="deal-page-coffee-type"><option value="">--</option><option value="Coffee Shop">Coffee Shop</option><option value="Cafe">Cafe</option><option value="Roaster">Roaster</option><option value="Drive-thru">Drive-thru</option><option value="Mobile/Cart">Mobile/Cart</option><option value="Restaurant">Restaurant</option><option value="Bakery">Bakery</option><option value="Other">Other</option></select></div>
                     <div class="form-group"><label>Monthly Revenue</label><select id="deal-page-revenue"><option value="">--</option><option value="Under $10k">Under $10k</option><option value="$10k - $25k">$10k - $25k</option><option value="$25k - $50k">$25k - $50k</option><option value="$50k - $100k">$50k - $100k</option><option value="$100k+">$100k+</option></select></div>
                     <div class="form-group"><label># Locations</label><input type="number" id="deal-page-locations" min="1"></div>
-                    <div class="form-group"><label>Current POS</label><select id="deal-page-pos"><option value="">--</option><option value="Square">Square</option><option value="Toast">Toast</option><option value="Clover">Clover</option><option value="Lightspeed">Lightspeed</option><option value="Revel">Revel</option><option value="TouchBistro">TouchBistro</option><option value="SpotOn">SpotOn</option><option value="None">None</option><option value="Other">Other</option></select></div>
+                    <div class="form-group"><label>Current POS</label><select id="deal-page-pos"><option value="">--</option><option value="joe">joe</option><option value="Square">Square</option><option value="Toast">Toast</option><option value="Clover">Clover</option><option value="Lightspeed">Lightspeed</option><option value="Revel">Revel</option><option value="TouchBistro">TouchBistro</option><option value="SpotOn">SpotOn</option><option value="None">None</option><option value="Other">Other</option></select></div>
                     <div style="margin-top:12px;padding-top:12px;border-top:1px solid #e5e7eb">
                       <label style="font-weight:600;font-size:12px;color:#374151;margin-bottom:8px;display:block">ICP Tier</label>
                       <select id="deal-page-icp-tier" onchange="updateIcpFitScore()" style="width:100%;padding:8px;border:1px solid #ddd;border-radius:6px;margin-bottom:12px">
@@ -7036,6 +7036,7 @@ async function showDealPage(id){
               <label style="font-size:10px;color:#999;text-transform:uppercase">Current POS</label>
               <select id="deal-shop-pos" style="width:100%;padding:8px;border:1px solid #e0e0e0;border-radius:6px;font-size:13px">
                 <option value="">-</option>
+                <option value="joe" ${shop.current_pos === 'joe' ? 'selected' : ''}>joe</option>
                 <option value="Square" ${shop.current_pos === 'Square' ? 'selected' : ''}>Square</option>
                 <option value="Toast" ${shop.current_pos === 'Toast' ? 'selected' : ''}>Toast</option>
                 <option value="Clover" ${shop.current_pos === 'Clover' ? 'selected' : ''}>Clover</option>
