Claim listing for all shops, partner badge in CRM

--- a/crm/index.html
+++ b/crm/index.html
@@ -1412,7 +1412,10 @@
                     </div>
                     <div id="deal-page-company-details" style="display:none;background:#f9fafb;border-radius:6px;padding:10px">
                       <div style="display:flex;justify-content:space-between;align-items:center;margin-bottom:8px">
-                        <span id="deal-page-company-name" style="font-weight:600;font-size:14px"></span>
+                        <div style="display:flex;align-items:center;gap:6px">
+                          <span id="deal-page-company-name" style="font-weight:600;font-size:14px"></span>
+                          <span id="deal-page-partner-badge" style="display:none;font-size:9px;background:#f97316;color:#fff;padding:2px 6px;border-radius:3px">☕ JOE PARTNER</span>
+                        </div>
                         <div style="display:flex;gap:6px;align-items:center">
                           <a id="deal-page-public-link" href="#" target="_blank" style="display:none;font-size:10px;color:#3b82f6">🔗</a>
                           <span id="deal-page-match-badge" style="display:none;font-size:9px;background:#10b981;color:#fff;padding:2px 4px;border-radius:3px">MATCHED</span>
@@ -9146,6 +9149,13 @@ ${activity.notes||'No notes'}`);
         document.getElementById('deal-page-company-details').style.display='block';
         document.getElementById('deal-page-submitted-info').style.display='none';
         document.getElementById('deal-page-company-name').textContent=shop.name;
+        // Show partner badge if joe partner
+        const partnerBadge=document.getElementById('deal-page-partner-badge');
+        if(shop.is_joe_partner){
+          partnerBadge.style.display='inline';
+        }else{
+          partnerBadge.style.display='none';
+        }
         document.getElementById('deal-page-company-address').value=shop.address||'';
         document.getElementById('deal-page-company-city').value=shop.city||'';
         document.getElementById('deal-page-company-state').value=shop.state||'';
