fix bottom banner for partners

--- a/owner/index.html
+++ b/owner/index.html
@@ -550,8 +550,10 @@
       document.getElementById('shopAddress').textContent = [shop.address, shop.city, shop.state].filter(Boolean).join(', ');
       
       // Hide upgrade banner for existing joe partners
+      // Check multiple possible indicators of partner status
       const upgradeBanner = document.getElementById('upgradeBanner');
-      if (shop.is_partner) {
+      const isPartner = shop.is_partner || shop.partner || shop.ordering_link || shop.mobile_ordering_url || shop.joe_ordering_link;
+      if (isPartner) {
         upgradeBanner.style.display = 'none';
       } else {
         upgradeBanner.style.display = 'block';
