--- a/owner/index.html
+++ b/owner/index.html
@@ -550,9 +550,8 @@
       document.getElementById('shopAddress').textContent = [shop.address, shop.city, shop.state].filter(Boolean).join(', ');
       
       // Hide upgrade banner for existing joe partners
-      // Check multiple possible indicators of partner status
       const upgradeBanner = document.getElementById('upgradeBanner');
-      const isPartner = shop.is_partner || shop.partner || shop.ordering_link || shop.mobile_ordering_url || shop.joe_ordering_link;
+      const isPartner = shop.is_joe_partner || shop.ordering_url || shop.partner_id;
       if (isPartner) {
         upgradeBanner.style.display = 'none';
       } else {
