market intelligence to crm

--- a/crm/index.html
+++ b/crm/index.html
@@ -407,6 +407,9 @@
         <div class="nav-item active" data-page="dashboard"><span>📊</span> <span>Dashboard</span></div>
         <a href="/crm/sales-dashboard/" class="nav-item" style="text-decoration:none;color:inherit"><span>📈</span> <span>Sales Dashboard</span></a>
       </div>
+      <div class="nav-item" onclick="window.location.href='/crm/market-intelligence.html'">
+        📊 Market Intelligence
+      </div>
       <div class="nav-section">
         <div class="nav-section-title">Sales</div>
         <div class="nav-item" data-page="shops"><span>☕</span> <span>Companies</span> <span class="badge" id="shops-badge">0</span></div>
